--- a/.github/workflows/deploy-pipeline.yaml
+++ b/.github/workflows/deploy-pipeline.yaml
@@ -49,6 +49,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Create release
+        id: create-release
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.github_token }}
@@ -58,4 +59,16 @@ jobs:
           body: New release for ${{ github.sha }}. Release notes on the documentation file
           draft: false
           prerelease: false
-        
+      - name: Download artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: zipped-bundle
+      - name: Upload release asset
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.github.token }}
+        with: 
+          upload_url: ${{ steps.create-release.outputs.upload_url }}
+          asset_path: ./${{ github.sha }}.zip
+          asset_name: source_code_with_libraries.zip
+          asset_content_type: application/zip
