--- a/.github/workflows/deploy-pipeline.yaml
+++ b/.github/workflows/deploy-pipeline.yaml
@@ -67,7 +67,7 @@ jobs:
       - name: Upload release asset
         uses: actions/create-release@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.github.token }}
+          GITHUB_TOKEN: ${{ secrets.github_token }}
         with: 
           upload_url: ${{ steps.create-release.outputs.upload_url }}
           asset_path: ./${{ github.sha }}.zip
