--- a/.github/workflows/deploy-pipeline.yaml
+++ b/.github/workflows/deploy-pipeline.yaml
@@ -65,11 +65,10 @@ jobs:
         with:
           name: zipped-bundle
       - name: Upload release asset
-        uses: actions/create-release@v1
+        uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.github_token }}
         with:
-          tag_name: ${{ github.run_number }}
           upload_url: ${{ steps.create-release.outputs.upload_url }}
           asset_path: ./${{ github.sha }}.zip
           asset_name: source_code_with_libraries.zip
